--- a/SenseHawkAssignment/package.json
+++ b/SenseHawkAssignment/package.json
@@ -16,7 +16,8 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+    "react-native-screens": "^3.27.0",
+    "react-native-text-input-interactive": "^0.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
