--- a/SenseHawkAssignment/package.json
+++ b/SenseHawkAssignment/package.json
@@ -10,10 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-<<<<<<< Updated upstream
-=======
     "@react-native-async-storage/async-storage": "^1.19.4",
->>>>>>> Stashed changes
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/auth": "^18.6.1",
     "@react-navigation/native": "^6.1.9",
@@ -25,7 +22,8 @@
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-text-input-interactive": "^0.1.4",
-    "react-native-toast-notifications": "^3.4.0"
+    "react-native-toast-notifications": "^3.4.0",
+    "react-native-vector-icons": "^10.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
