--- a/SenseHawkAssignment/android/gradle.properties
+++ b/SenseHawkAssignment/android/gradle.properties
@@ -32,6 +32,12 @@ FLIPPER_VERSION=0.182.0
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
 reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 
+
+MYAPP_RELEASE_STORE_FILE=assignment-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=assignment-alias
+MYAPP_RELEASE_STORE_PASSWORD=assignment
+MYAPP_RELEASE_KEY_PASSWORD=assignment
+
 # Use this property to enable support to the new architecture.
 # This will allow you to use TurboModules and the Fabric render in
 # your application. You should enable this flag either if you want
